[package]
name = "terminal-sage"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
rustyline = "12.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.117"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
